# autometa

./: .buildpacks  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENT.md  AGENTS.md  AGENTS_EXPERT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.db  Dockerfile.slim  JOURNAL.md  Makefile  Procfile  README.md  alembic.ini  cron.json  deploy-remote.sh  docker-compose.expert.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  postdeploy.sh  pyproject.toml  pytest.ini  requirements-full.txt  requirements.txt  scalingo.json
.claude/: ARCHITECTURE.md  MAINTENANCE.md  settings.json
.claude/agents/: tech-debt.md
.claude/hooks/: check_env_on_tag.py  check_python.py  guard_write_paths.py
.claude/rules/: api.md  code.md  review.md  sql.md  tests.md  zones-critiques.md
.github/: codeql-config.yml  dependabot.yml  pull_request_template.md
.github/workflows/: _deploy.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0d4871663bfd_initial_schema.py  1ab3818607f7_add_dashboard_cron_columns.py  1eec43dc9e46_add_conversation_message_embeddings.py  401dce8c4864_unique_publication_id.py  5759bd430b2e_add_conversation_flag_columns.py  7397f669848c_drop_unused_schema_version_table.py  7946c9c555a4_dashboards_schema.py  7b7df556b6d0_publication_refresh_columns.py  87e9b1ca66b8_dashboard_publications.py  a1b2c3d4e5f6_add_flagged_at_flag_reason.py  a1b2c3d4e5f6_text_to_datetime.py  b12cbac64ff9_enforce_not_null_on_default_backed_.py  b3e7f1a2c4d9_add_projects_recettes.py  c4d72e1f9a8b_usage_events.py  c4f8a2b1d7e3_add_recettes.py  c89f7601677b_cron_schedule_default_to_crontab.py  d37119f978f5_dashboards_import.py  d5a9c3e2f1b4_add_project_deploy_fields.py  df20b48b49c5_drop_wishlist_table.py  e3f1a9c27b54_drop_pm_tables.py  e6b2d4f8a1c7_add_scaleway_fields.py
archive/plans/: 2026-01-16-multi-source-design.md  2026-01-16-multi-source-impl.md
auth/: allowed_emails.txt.example
benchmarks/: card_retrieval.py
config/: sources.yaml  sources.yaml.example
cron/check-s3-backups/: CRON.md  cron.py
cron/cleanup-dashboards/: CRON.md  cron.py
cron/index-autometa-tables/: CRON.md  cron.py
cron/refresh-rpe/: CRON.md  cron.py
cron/slack-feedback/: CRON.md  cron.py
cron/webinaires/: CRON.md  cron.py
deploy/: deploy.sh  logs.sh
deploy_scaleway/: docker-compose.scaleway.yml
docs/: database-analysis-2026-01-27.md  deploiement.md  expert-mode-implementation.md  interactive-apps.md  interactive-dashboards.md  remarques-victor-2026-03-19.md  scaling-recommendations.md  scalingo-deployment.md  tally-integration.md
docs/dashboard-template/: APP.md  app.js  cron.py  index.html  style.css
docs/plans/: 2026-01-03-metabase-integration-design.md  2026-01-05-web-frontend-design.md  2026-01-06-sdk-backend-design.md  (+14 more)
evals/: blind_eval.py  compare.py  questions.py  run_eval.py
flows/: base.py  check_s3_backups.py  cleanup_dashboards.py  runner.py  s3_app_crons.py  serve.py  slack_feedback.py  sync_inventory.py  sync_sites.py  sync_webinaires.py
knowledge/: README.md  methodology.md
lib/: _audit.py  _matomo.py  _matomo_ui.py  _metabase.py  _sources.py  api_signals.py  autometa_tables_db.py  browser_smoke.py  coolify.py  dashboard_storage.py  dashboards.py  dashboards_import_v1.py  data_inclusion.py  docker_cleanup.py  docker_deploy.py  eval_corpus.py  expert_git.py  expert_review.py  failure_detection.py  gitea.py  harness_eval.py  job_inputs.py  jobs.py  matomo.py  metabase.py  migrate.py  notion.py  pg.py  query.py  readers.py  recettes.py  rpe.py  rpe_build.py  rpe_gwt.py  rpe_templates.json  scaleway_publish.py  scaleway_rdb.py  scaleway_registry.py  slack.py  slugs.py  (+5 more)
scripts/: api-linker.py  backfill_conversation_tags.py  backfill_report_tags.py  backfill_tool_taxonomy.py  build_rpe_templates.py  datalake_create_webinaires.py  deploy.py  detect_failed_conversations.py  embed_notion_research.py  employer_org_breakdown.py  expert_e2e_flow.py  expert_true_user_e2e.py  file_active_par_departement.py  file_active_regions.py  fix_updated_at.py  gender_candidatures_nov2025.py  import_sql.py  migrate_reports.py  migrate_to_scalingo.py  prescriber_org_breakdown.py  prescribers_by_org_dec2025.py  prescribers_by_org_type.py  prescribers_org_breakdown_dec2025.py  query_gender_nov2025.py  rdv_insertion_evolution.py  refresh_research.py  search_research.py  setup_expert_test.sh  slack_feedback.py  sync_notion_research.py  sync_to_scalingo.py  sync_webinaires.py
skills/: list_dashboards.py
tests/: __init__.py  conftest.py  test_agents_cli.py  test_alerts.py  test_api_signals.py  test_autometa_tables_db.py  test_backend.py  test_backend_cli.py  test_backend_cli_ollama.py  test_backend_ollama.py  test_benchmark.py  test_bugs.py  test_check_python.py  test_cli_ollama.py  test_complexity.py  test_concurrency.py  test_config.py  test_conversations.py  test_conversations_api.py  test_conversations_permissions.py  test_conversations_routes.py  test_cron.py  test_cron_delta_upload.py  test_cron_routes.py  test_dashboard_storage.py  test_dashboards_heuristic.py  test_dashboards_import_v1.py  test_dashboards_inventory.py  test_dashboards_lib.py  test_dashboards_migration.py  test_dashboards_routes.py  test_data_inclusion.py  test_database.py  test_db.py  test_deps.py  test_environment.py  test_flag_conversation.py  test_flows.py  test_fork_conversation.py  test_gitea.py  (+63 more)
watchdog/: Dockerfile  agent.py  config.py  llm.py  main.py  memory.py  reporting.py  tools.py
web/: __init__.py  alerts.py  app.py  audit.py  benchmark.py  claude_auth.py  claude_credentials.py  complexity.py  concurrency.py  config.py  cron.py  dashboards.py  database.py  db.py  deps.py  environment.py  github.py  harness_eval.py  helpers.py  interactive_apps.py  llm.py  llm_call.py  llm_errors.py  log.py  logging.py  logging_utils.py  memory_introspect.py  models.py  notion.py  otel.py  pm.py  publications.py  redis_conn.py  request_context.py  requirements.txt  runner.py  s3.py  schema.py  selftest.py  sentry.py  (+7 more)
(+290 files in other folders)
