[project]
name = "matometa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.129.2",
    "uvicorn[standard]>=0.40.0",
    "sse-starlette>=3.1.2",
    "python-multipart>=0.0.21",

    # Claude API
    "anthropic>=0.75.0",

    # HTTP client (used directly in llm.py)
    "httpx>=0.28.1",

    # Templating
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "markdown>=3.7",

    # Utils
    "python-dotenv>=1.2.1",
    "click>=8.3.1",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",

    # Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",

    # Database
    "psycopg2-binary>=2.9.10",

    # S3-compatible object storage
    "boto3>=1.35.0",

    # Process management
    "pexpect>=4.9.0",

    # Data analysis
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "hmmlearn>=0.3.0",

    # File format support
    "openpyxl>=3.1.0",
    "mammoth>=1.6.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
]

# =============================================================================
# Ruff — linting & formatting
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["data/", ".venv/", "evals/", "skills/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line length — enforce progressively, not retroactively
]

[tool.ruff.lint.per-file-ignores]
"web/app.py" = ["E402"]              # imports after logging setup
"web/routes/__init__.py" = ["F401"]  # re-exports
"scripts/*" = ["E402"]               # sys.path / dotenv setup before imports

# =============================================================================
# Bandit — SAST
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "evals", "data", "skills"]
skips = [
    "B310",  # urllib.request.urlopen — used for controlled internal API calls (Matomo, Metabase, Notion)
    "B704",  # markupsafe.Markup — used intentionally to render agent-generated markdown
]
