[project]
name = "autometa"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "python-multipart>=0.0.22",
    # Claude API
    "claude-agent-sdk>=0.1.52",
    # Templating
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "markdown>=3.10",
    # Utils
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "pyyaml>=6.0.3",
    # Database
    "psycopg2-binary>=2.9.11",
    # S3-compatible object storage
    "boto3>=1.42.78",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
]

[project.scripts]
autometa = "web.app:main"
sync-sites = "skills.sync_sites.scripts.sync_sites:main"
sync-inventory = "skills.sync_metabase.scripts.sync_inventory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web", "lib", "skills"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]

# =============================================================================
# Ruff — linting & formatting
# =============================================================================

[tool.ruff]
target-version = "py314"
line-length = 120
# evals/: experimental evaluation scripts, intentionally loose style
# skills/: self-contained agent skill packages with their own conventions
exclude = ["data/", ".venv/", "evals/", "skills/"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line length — enforce progressively, not retroactively
]

[tool.ruff.lint.per-file-ignores]
"web/app.py" = ["E402"]              # imports after logging setup
"scripts/*" = ["E402"]               # sys.path / dotenv setup before imports
"tests/test_knowledge_sync.py" = ["E402"]  # sys.path setup before imports
"tests/test_uploads.py" = ["E402"]         # env config before imports

# =============================================================================
# Bandit — SAST
# =============================================================================

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services or credentials",
]

[tool.bandit]
exclude_dirs = ["tests", "evals", "data", "skills"]
skips = [
    "B310",  # urllib.request.urlopen — used for Notion API calls and research sync (controlled URLs)
    "B704",  # markupsafe.Markup — used intentionally to render agent-generated markdown
]

[tool.ruff.format]
preview = true
